IVYPORTAL-9730:Saved filter is not reseted after changing filters - fix more menu broken on samsung pad
Former-commit-id: 88cb7abefa0f259b8ced74c47d712f882267f501

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -377,7 +377,7 @@ _:-ms-input-placeholder, :root .task-widget .in-progress-task-checkbox, .case-wi
 
 .task-widget .ui-overlaypanel.filter-add-panel .ui-overlaypanel-content,
 .case-widget-container .ui-overlaypanel.filter-add-panel .ui-overlaypanel-content {
-  min-width: 140px;
+  min-width: max-content;
   padding: 0 !important;
 }
 
